--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="libs/amenu/amenu.css">
-	<script src="script/scroll.js" defer></script>
+	<script defer src="script/scroll.js"></script>
+	<script defer src="script/tabs.js"></script>
+	<script defer src="script/accordeon.js"></script>
+	<script defer src="script/getData.js"></script>
+	<script defer src="script/sendForm.js"></script>
 	<title>iPhone</title>
 </head>
 
